--- a/kadai_sample/kadai_sample/lesson1-org3.html
+++ b/kadai_sample/kadai_sample/lesson1-org3.html
@@ -9,8 +9,9 @@
 	<P>担当　中村直人</center>
 　　　　<P>この授業では、CGの理論と実際の制作を体験します。</p>
 <p>アニメーションでCGが動くと感動です。</p>
-<p><a href="kadai_sample/kadai_samaple/lesson1-org1.html">もどる</a></p>
+<p><a href="lesson1-org1.html">もどる</a></p>
         <P><img src="ganba.png" width="128" height="128" alt="頑張ろう">
    </BODY>
 
 </HTML>
+
