--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>2025CG</title>
+</head>
+<body>
+    <h1>2025CG メインページ</h1>
+    <p><a href="kadai_sample/kadai_sample/lesson1-top.html">講義ページへ</a></p>
+</body>
+</html>
