--- a/kadai_sample/kadai_sample/lesson1-org3.html
+++ b/kadai_sample/kadai_sample/lesson1-org3.html
@@ -8,10 +8,12 @@
 	<center><h1>コンピュータグラフィックス</h1>
 	<P>担当　中村直人</center>
 　　　　<P>この授業では、WebGLを用いてコンピュータグラフィックスします。</p>
-<p><a href="lesson1-org1.html">もどる</a></p>
+
         <P><img src="ganba.png" width="128" height="128" alt="頑張ろう">
+			<p><a href="lesson1-top.html">もどる</a></p>
    </BODY>
 
 </HTML>
+
 
 
