--- a/kadai_sample/kadai_sample/lesson1-org3.html
+++ b/kadai_sample/kadai_sample/lesson1-org3.html
@@ -5,6 +5,11 @@
       <TITLE>Webページの基礎</TITLE>
    </HEAD>
    <BODY>
+	   <p id="time"></p>
+    <script>
+     const now = new Date();
+     document.getElementById("time").textContent = now.toString();
+    </script>
 	<center><h1>コンピュータグラフィックス</h1>
 	<P>担当　中村直人</center>
 　　　　<P>この授業では、WebGLを用いてコンピュータグラフィックスします。</p>
@@ -13,6 +18,7 @@
    </BODY>
 
 </HTML>
+
 
 
 
